Der Abstract wurde hinzugefuegt

--- a/sections/Abstract.tex
+++ b/sections/Abstract.tex
@@ -1,3 +1,32 @@
 \section*{Abstract}
 
-%Todo Abstract erstellen
+%Problemstellung
+Mit wachsender Codebase erhöht sich der Aufwand, der notwendig ist, um neue Funktionen zu entwickeln und zu implementieren. Dies liegt besonders daran, dass sich im Laufe der Entwicklung viele Abhängigkeiten zwischen Klassen und Methoden entwickelt haben, die eine schnelle Weiterentwicklung hemmen. Um dem entgegen zu wirken, hat PluraPolit beschlossen, die aktuelle monolithische Softwarearchitektur in eine Microservice-Architektur umzustellen.
+
+
+%Zielsetzung
+Das Ziel dieser Arbeit ist es, für PluraPolit die Bedingungen zu ermitteln, die für eine mögliche Umstellung erforderlich sind und eine klare Bewertung für den Nutzen des Vorhabens abzugeben.
+
+%Methodik
+Um dies herauszufinden, wurden Bedingungen aus einer Literaturrecherche abgeleitet und Leitfadeninterviews mit Experten durchgeführt. Dabei wurden die Fragen für die Interviews aus den Bedingungen abgeleitet. Die Befragten wurden aufgrund ihrer jahrelangen Erfahrung im Bereich der Microservice-Architektur und Start-up-Branche ausgewählt.
+
+%Ergebnisse
+Die Ergebnisse zeigten, dass vor der Umstellung folgende Bedingungen erfüllt sein müssen:
+\begin{enumerate}
+	\item Die Umstellung ist für ein Start-up lukrativ
+	\item Das System weist eine gewisse Komplexität auf
+	\item Die Geschäftsabläufe lassen sich voneinander trennen
+	\item Es ist möglich, die Verantwortung für ein Geschäftsprozess an ein eigenständiges Team zu geben
+	\item Die Services können untereinander über Schnittstellen kommunizieren
+	\item Das Netzwerk ermöglicht die Kommunikation zwischen Services
+	\item Der Zugriff aufs Netzwerk ist vor Unbefugten gesichert
+\end{enumerate}
+
+Als wichtigste Bedingung stellte sich die Bewertung der Profitabilität heraus, welche allerdings vom zu erwartenden Mehrwert und den notwendigen Kosten abhängt. 
+
+%Bezug zu PluraPolit
+Da für PluraPolit keine nachvollziehbaren Vorteile aus einer Umstellung erkannt werden, während Kosten durch weitere Schulungen oder externe Fachkräfte absehbar sind, ist eine Umstellung für PluraPolit zum aktuellen Zeitpunkt nicht zu empfehlen.
+
+\newpage
+
+\section*{Abstract (Englisch)}
